style(console): fix captcha box alignment

--- a/packages/experience/src/containers/CaptchaBox/index.module.scss
+++ b/packages/experience/src/containers/CaptchaBox/index.module.scss
@@ -1,7 +1,5 @@
 @use '@/scss/underscore' as _;
 
 .captchaBox {
-  display: flex;
-  justify-content: center;
   margin-bottom: _.unit(2);
 }
